fixing spacing between  protocol images

--- a/src/styles/modules/PoolSearch.module.css
+++ b/src/styles/modules/PoolSearch.module.css
@@ -98,11 +98,14 @@
   display: inline; 
   height: 50;
   align-items: center;
+
 }
+
 
 img.protocol {
   width: 20px;
   height: 20px;
+
 }
 
 .protocol-not-selected {
@@ -111,7 +114,8 @@ img.protocol {
   border: none;
   width: 35px; 
   height: 35px; 
-  padding-top: 5;
+  padding-top: 5px;
+  margin-bottom: 8px;
   /* box-shadow: -1.2px -1.2px 1.2px white, 1.2px 1.2px 1.2px #babecc; */
   background-color: transparent;
 }
@@ -132,7 +136,8 @@ img.protocol {
   border: none;
   width: 35px; 
   height: 35px; 
-  padding-top: 5;
+  padding-top: 5px;
+  margin-bottom: 8px;
   /* box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #f7f5fe;
   background-color: rgba(241, 232, 252, 0.5); */
 }
